<resources>
    <string name="app_name">Asteroids</string>
    <string name="asteroid_hazard_cd">Asteroid Hazard Image</string>
    <string name="au_exp">Astronomical unit (au) is a unit of length, roughly the distance from Earth to the Sun and equal to about 150 million kilometres (93 million miles) </string>
    <string name="au_exp_help">Help : Astronomical unit (au) is a unit of length, roughly the distance from Earth to the Sun and equal to about 150 million kilometres (93 million miles) </string>
    <string name="close_approach_date">Close approach date</string>
    <string name="absolute_magnitude">Absolute magnitude</string>
    <string name="estimated_diameter">Estimated Diameter</string>
    <string name="relative_velocity">Relative Velocity</string>
    <string name="distance_from_earth">Distance From Earth</string>

    <string name="is_hazardous">Hazardous</string>
    <string name="normal">Normal</string>
    <string name="all">All</string>
    <string name="week">Week</string>
    <string name="today">Today</string>
</resources>